@@ -3,6 +3,7 @@ package dev.abraham.book.config;
 import dev.abraham.book.model.Role;
 import dev.abraham.book.repository.RoleRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.filter.CorsFilter;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
@@ -20,13 +21,15 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
 public class BeansConfig {
     private final UserDetailsService userDetailsService;
+    @Value("${application.security.cors.origins:*}")
+    private List<String> corsOrigins;
+
     @Bean
     public CommandLineRunner runner(RoleRepository roleRepository) {
         return args -> {
@@ -63,17 +66,10 @@ public class BeansConfig {
     public CorsFilter corsFilter() {
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         final CorsConfiguration config=new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:8080", "http://localhost"));
-        config.setAllowedHeaders(Arrays.asList(HttpHeaders.ORIGIN,
-                HttpHeaders.CONTENT_TYPE,
-                HttpHeaders.ACCEPT,
-                HttpHeaders.AUTHORIZATION));
-        config.setAllowedMethods(Arrays.asList("GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "PATCH"));
+        //config.setAllowCredentials(true);
+        config.setAllowedOrigins(corsOrigins);
+        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedMethods(Arrays.asList("*"));
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
     }
